name:
  hello-chan
version:
  0.1.0.0
synopsis:
  Template for message passing queues between threads
description:
  Template for message passing queues between threads
homepage:
  https://github.com/jxv/hello-threads#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  https://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Test
build-type:
  Simple
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    HelloChan.Run
    HelloChan.System
    HelloChan.Interthread
    HelloChan.Subsystem
    HelloChan.Control.System
    HelloChan.Control.Run
    HelloChan.Control.HasNumber
    HelloChan.Control.Forker
    HelloChan.Control.Console
    HelloChan.Control.ConsoleImpl
    HelloChan.Broadcast.System
    HelloChan.Broadcast.Run
    HelloChan.Broadcast.HasNumber
    HelloChan.Broadcast.Broadcaster
    HelloChan.Broadcast.Delayer
    HelloChan.Broadcast.DelayerImpl
    HelloChan.Printy.System
    HelloChan.Printy.Run
    HelloChan.Printy.Receiver
    HelloChan.Printy.Console
    HelloChan.Printy.ConsoleImpl
  build-depends:
      base >= 4.7 && < 5
    , text
    , mtl
    , safe-exceptions
    , transformers
    , time
    , text-conversions
  default-extensions:
    OverloadedStrings
    FlexibleContexts
    GeneralizedNewtypeDeriving
  ghc-options:
    -Werror
  default-language:
    Haskell2010

executable hello-chan-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hello-chan
    , text
    , mtl
    , transformers
    , text-conversions
    , time
    , either
  ghc-options:
    -Werror
  default-language:
    Haskell2010

test-suite hello-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , hello-chan
    , test-fixture
    , hspec
    , text
    , text-conversions
    , transformers
    , mtl
    , time
    , data-default
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Werror
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    OverloadedStrings
    TemplateHaskell

source-repository head
  type:
    git
  location:
    https://github.com/jxv/hello-chan
